syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

message TSecurity {
    string secId = 1;
    string boardId = 2;
    double bId = 3;
    reserved 4;
    double offer = 5;
    reserved 6;
    double spread = 7;
    int32 bIdDepthT = 8;
    int32 offerDepthT = 9;
    double open = 10;
    double low = 11;
    double high = 12;
    double last = 13;
    double lastChange = 14;
    double lastChangePrcnt = 15;
    int32 qty = 16;
    double value = 17;
    double valueUsd = 18; // original VALUE_USD
    double waPrice = 19;
    double lastCngToLastWaPrice = 20;
    double waPToPrevWaPricePrcnt = 21;
    double waPToPrevWaPrice = 22;
    double closePrice = 23;
    double marketPriceToday = 24;
    double marketPrice = 25;
    double lastToPrevPrice = 26;
    int32 numTrades = 27;
    int64 volToday = 28;
    int64 valToday = 29;
    int64 valTodayUsd = 30; // original VALTODAY_USD
    double etfSettlePrice = 31;
    string tradingStatus = 32;
    google.protobuf.Timestamp updateTime = 33;
    reserved 34;
    reserved 35;
    double lClosePrice = 36;
    double lCurrentPrice = 37;
    double marketPrice2 = 38;
    reserved 39;
    reserved 40;
    double change = 41;
    google.protobuf.Timestamp time = 42;
    reserved 43;
    reserved 44;
    double priceMinusPrevWaPrice = 45;
    double openPeriodPrice = 46;
    int64 seqNum = 47;
    google.protobuf.Timestamp sysTime = 48;
    double closingAuctionPrice = 49;
    double closingAuctionVolume = 50;
    double issueCapitalization = 51;
    google.protobuf.Timestamp issueCapitalizationUpdateTime = 52;    // original ISSUECAPITALIZATION_UPDATETIME
    string etfSettleCurrency = 53;
    int64 valTodayRur = 54; // VALTODAY_RUR
    string tradingSession = 55;
}

message TAnalyticsSendSecurityResponse {
    enum SecurityInsertResult {
        OK = 0;
        ALREADY_EXISTS = 1;
        DB_FAIL = 2;
        UNKNOWN_FAIL = 3;
    }

    SecurityInsertResult result = 1;
    optional string reason = 2;
}

message TAnalyticsGetPricesRangeResponse {
    repeated google.protobuf.Timestamp updateTimes = 1;
    repeated double prices = 2;
}

message TAnalyticsGetPricesRangeRequest {
    google.protobuf.Timestamp beginPeriod = 1;
    google.protobuf.Timestamp endPeriod = 2;
    string secId = 3;
    string boardId = 4;
}

message TAnalyticsGetLastPriceRequest {
    string secId = 1;
    string boardId = 2;
}

message TAnalyticsGetLastPriceResponse {
    google.protobuf.Timestamp updateTime = 1;
    double price = 2;
}

service Analytics {
  rpc SendSecurity(TSecurity) returns (TAnalyticsSendSecurityResponse);
  rpc GetPricesRange(TAnalyticsGetPricesRangeRequest) returns (TAnalyticsGetPricesRangeResponse);
  rpc GetLastPrice(TAnalyticsGetLastPriceRequest) returns (TAnalyticsGetLastPriceResponse);
}
